# sct_config

./: CMakeLists.txt  package.xml
auto_script/: record_rosbag.sh  record_rosbag_target_detection.sh
config/rs_lidar/: config.yaml
config/rviz/: cartographer_2d.rviz  gmapping.rviz  navigation.rviz  scout1_navigation.rviz  scout2_navigation.rviz  scout3_navigation.rviz  scout_navigation.rviz
config/sct_controllers/: scout_controllers.yaml
config/sct_hw/: scout_hw.yaml
launch/: load_controllers.launch  multi_robot.launch  multi_robot_load_controllers.launch  sct_hw.launch
launch/align_coordinate/: multi_robot_align_coordinate.launch  multi_robots_align_coordinate.launch
launch/chassis_drive/: chassis_driver.launch  multi_robot_chassis_driver.launch
launch/controllers/: controllers_multi_robot.launch  load_controllers.launch  multi_robot_load_controllers.launch  single_robot_controllers.launch
launch/description/: load_robot_description.launch  multi_robot_description.launch  multi_robots_description.launch
launch/explore/: multi_robot_explore.launch  multi_robots_explore.launch
launch/gazebo/: empty_world.launch  gazebo_multi_robot.launch  gazebo_single_robot.launch  load_sim_world.launch  multi_robot_run_gazebo.launch  single_robot_gazebo.launch
launch/hw_driver/: multi_robot_hw_driver.launch
launch/lio/: multi_robot_lio_mapping.launch  multi_robots_lio_mapping.launch
launch/ouster_drive/: multi_robot_ouster_driver.launch
launch/pointcloud_to_laserscan/: pointcloud_to_scan.launch
launch/rs_lidar/: start.launch
(+43 files in other folders)
