<?xml version="1.0"?>
<package format="2">
    <name>sct_config</name>
    <version>0.0.0</version>
    <description>The sct_config package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="myx@todo.todo">myx</maintainer>


    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
